dataset1235/2025-2/1153765216/users/1937138466/executions/2747719322_3921830315.log
== SUBMISSION (2025-08-19 03:28:51)
-- CODE: 
gasolina = 2.86
serviço = 50.00

litros = float(input("Informe a quantidade de litros abastecidos: "))
total = formula + formula*(34/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:23)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:28:52)
-- CODE: 
gasolina = 2.86
serviço = 50.00

litros = float(input("Informe a quantidade de litros abastecidos: "))
total = formula + formula*(34/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:23)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:28:49)
-- CODE: 
gasolina = 2.86
serviço = 50.00

litros = float(input("Informe a quantidade de litros abastecidos: "))
total = formula + formula*(34/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 03:32:28)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:28:28)
-- CODE: 
gasolina = 2.86
serviço = 50.00

litros = float(input("Informe a quantidade de litros abastecidos: "))
total = formula + formula*(34/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:43)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:22)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:24)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:18)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:34:45)
-- CODE: 
litros = float(input())

total = (litros * 2.86 + 50.00) * 1.34


print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:28:53)
-- CODE: 
gasolina = 2.86
serviço = 50.00

litros = float(input("Informe a quantidade de litros abastecidos: "))
total = formula + formula*(34/100)

print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = formula + formula*(34/100)
            ^^^^^^^
NameError: name 'formula' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 03:32:25)
-- CODE: 
litros = float(input())

total_sem_icms = litos * 2.86 + 50

total_com_icms = total_sem_icms * 1.34

print(round(total_com_icms, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total_sem_icms = litos * 2.86 + 50
                     ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
